# xpresspp

./: .gitignore  FUTURE_PLAN.md  README.md  docker-compose.yml  install.sh
benchmarks/: advanced_benchmark.py  advanced_results.md  results.md  run_benchmarks.sh
benchmarks/express/: app.js  package-lock.json  package.json
benchmarks/fastapi/: main.py
benchmarks/go/: main.go
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
benchmarks/xpresspp/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt
cli/include/cli/: commands.h  common.h  diagnostics.h
cli/src/: commands.cpp  common.cpp  diagnostics.cpp  main.cpp
core/: CMakeLists.txt
core/include/xpresspp/: app.h  config.h  database.h  env.h  errors.h  logger.h  orm.h  request.h  response.h  router.h  test.h  utils.h  validation.h  xpresspp.h
core/include/xpresspp/middleware/: auth.h  body_limit.h  cors.h  csrf.h  rate_limit.h  request_id.h  security.h  session.h  validation.h
docs/: async-await.md  authentication.md  benchmarks.md  body-limit.md  cli.md  configuration.md  cookies.md  cors.md  csrf.md  database.md  dependencies.md  error-handling.md  file-uploads.md  getting-started.md  index.md  json.md  logging.md  middleware.md  next-steps.md  package-lock.json  package.json  project-structure.md  rate-limit.md  request-id.md  request.md  response.md  routing.md  security.md  session.md  static-files.md  styles.css  validation.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
examples/complete_backend/: CMakeLists.txt  README.md  main.cpp  schema.xp
examples/complete_backend/src/: exports.h
examples/complete_backend/src/config/: db.h
examples/complete_backend/src/controllers/: auth_controller.h  user_controller.h
examples/complete_backend/src/middleware/: auth.h  logger.h
examples/complete_backend/src/models/: db.h
examples/complete_backend/src/routes/: api_routes.h
templates/default_app/: .env.example  CMakeLists.txt  default.db  main.cpp  schema.xp  vcpkg.json
templates/default_app/src/controllers/: home_controller.h
templates/default_app/src/middleware/: auth.h
templates/default_app/src/routes/: index.h
