[package]
name = "rust_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
